--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>fungi timestamp</title>
 </head>
 <body>
-    <h2>current fungi timestamp is <span id="timestamp"></span></h2>
-    <p>fungi timestamp was created on unix timestamp 1707992306</p>
+    <div id="container">
+        <span id="timestamp"></span>
+        <!-- <span id="flavortext">
+            fungi timestamp was created on unix timestamp 1707992306
+        </span> -->
+    </div>
 
     <script src="script.js"></script>
 </body>
